# industrial-adaptive-energy-intelligence

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  UPGRADE_NOTES.md  pyproject.toml
configs/: data_contract.yml  drift_policy.yml  locked_test_contract.yml  model_contract.yml  project.yml  report_contract.yml  silver_contract.yml  target_contract.yml  visualization_contract.yml
data/: DATA_LICENSE.md
docs/: BRIEF_SPECIFICATION.md  DATA_PROVENANCE.md  DECISION_GATES.md  FREE_TOOLCHAIN.md  GITHUB_SETUP.md  PUBLIC_REPOSITORY_POLICY.md  ROADMAP.md  SILVER_ANALYTICAL_LAYER.md  TARGET_AND_LEAKAGE_CONTRACT.md  VISUALIZATION_STANDARD.md
examples/: report_payload.template.json
outputs/: reporting_evidence_manifest.json
schemas/: report_payload.schema.json  silver_contract.schema.json  target_contract.schema.json
scripts/: audit_public_content.py  bootstrap_unix.sh  bootstrap_windows.ps1  build_benchmark_evidence.py  build_brief.py  build_chronological_folds.py  build_elastic_net_candidate_evidence.py  build_hist_gradient_boosting_candidate_evidence.py  build_reporting_evidence.py  build_reporting_figures.py  build_ridge_candidate_evidence.py  build_selected_model_manifest.py  build_silver.py  download_data.py  evaluate_locked_test_once.py  run_pipeline.py
sql/: business_metrics.sql  quality_checks.sql  validate_silver.sql
tests/: test_chronological_splits.py  test_contracts.py  test_data_intake.py  test_locked_test_artifacts.py  test_locked_test_closure.py  test_locked_test_contract.py  test_locked_test_evaluation.py  (+16 more)
(+70 files in other folders)
