[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-adaptive-energy-intelligence"
version = "0.1.0"
description = "Reproducible industrial energy forecasting, drift governance, optimization, and technical reporting."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{name = "Rodolfo Pereira"}]
dependencies = [
  "duckdb>=1.2,<2",
  "jsonschema>=4.23,<5",
  "matplotlib>=3.9,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "Pillow>=11,<12",
  "pyarrow>=18,<22",
  "PyYAML>=6.0,<7",
  "reportlab>=4.2,<5",
  "scikit-learn>=1.6,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
